syntax = "proto3";

option go_package = "/;protog";

package avenue.common;

enum AccountType {
    USA = 0;
    BankCash = 1;
}

enum EntryKind {
    Block = 0;
    Unblock = 1;
    Debit = 2;
    Credit = 3;
}

enum Direction {
    SdToBank = 0;
}

message Message {}

message NewTransferMessage {
    double amount = 1;
    string acc_id = 2;
    Direction direction = 3;
}

message Transfer {
    double amount = 1;
    string acc_id = 2;
    string execution_id = 3;
    Direction direction = 4;
    string status = 5;
}

message ApexWithdrawMessage {
    double amount = 1;
    string apex_acc_id = 2;
    string execution_id = 3;
    Direction direction = 4;
}

message AddEntry {
    double amount = 1;
    string acc_id = 2;
    EntryKind kind = 3;
    string execution_id = 4;
}

message AccountInformation {
    string account_us_id = 1;
    string account_bank_id = 2;
}

message BalanceInformation {
    string account_id = 1;
    double available = 2;
}